Fix card spacing and CSS

--- a/frontend/assets/scss/_bridges.scss
+++ b/frontend/assets/scss/_bridges.scss
@@ -8,16 +8,6 @@
     }
 }
 
-#bridgedb-steps-container {
-    gap: 24px;
-
-    > section {
-        flex: 1 1 0px;
-        border: 1px solid #EEEEEE;
-        border-radius: 4px;
-    }
-}
-
 .p-20px {
     padding: 20px;
 }
